# svoote

./: .gitignore  Cargo.toml  README.md  package-lock.json  tailwind.config.js
img/: svoote_demo.webm
locales/: compliance.yml  host.yml  play.yml  start_page.yml
src/: about_page.rs  app_error.rs  auth_token.rs  compliance.rs  config.rs  host.rs  html_page.rs  illustrations.rs  landing_page.rs  live_item.rs  live_poll.rs  live_poll_store.rs  main.rs  play.rs  polls.rs  session_id.rs  slide.rs  start_page.rs  static_file.rs  svg_icons.rs  word_cloud.rs  wsmessage.rs
src/static/: custom.js  enzuzo_24_07_18.js  input.css  output.css  tailwind_4_dev.js
