[package]
name = "svoote-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tokio", "query", "multipart"] }
tower-sessions = { version = "0.12.2" }
tower-sessions-redis-store = { version = "0.13.0" }
time = { version = "0.3.36", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures = "0.3.30"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
log = "0.4.20"
env_logger = "0.11.3"
rand = "0.8.5"
md5 = "0.7.0"
maud = { version = "0.26.0", features = ["axum"] }
qrcode = { version = "0.14.0" }
arrayvec = "0.7.4"
smartstring = { version = "1.0.1", features = ["serde"] }
